# request-logger

./: Cargo.toml  README.md
.cargo/: config.toml
lib/: Cargo.toml
lib/src/: lib.rs  models.rs  request_logger.rs
prisma/: schema.prisma
service/: .dockerignore  Cargo.toml  Dockerfile
service/.devcontainer/: devcontainer.json
service/prisma/: schema.prisma
service/prisma/migrations/20230510114015_initial/: migration.sql
service/prisma/migrations/20230528163321_remove_body/: migration.sql
service/prisma/migrations/20230605111709_add_body/: migration.sql
service/prisma/migrations/20230605115123_add_default_for_request_data/: migration.sql
service/src/: main.rs  prisma.rs
src/: lib.rs  prisma.rs  request_logger.rs  request_timer.rs
test/: Cargo.toml  Dockerfile
test-server/: Cargo.toml
test-server/src/: main.rs
test/src/: lib.rs  main.rs  main2.rs  models.rs  request_context.rs  request_logger copy.rs  request_logger.rs
