[package]
name = "request_logger_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
request_logger_lib = { version = "0.2.0", git = "https://github.com/synthesis-labs/request-logger.git" }

reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
serde = { version = "1.0.163" }
tokio = { version = "1", features = ["full"] }